--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   cupertino_icons: ^1.0.2
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +25,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/lotties/
 
   fonts:
     - family: Billabong
